*** diagmeta, version 0.3-1, 2019-mm-dd ***

 ** User-visible changes **

  * Export R functions:
    - as.data.frame.diagmeta(), plot.diagmeta(), print.diagmeta(),
      print.diagstats(), print.summary.diagmeta(), summary.diagmeta()

  * diagmeta():
    - check for numerical values in arguments 'TP', 'FP', 'TN', 'FN',
      and 'cutoff'


*** diagmeta, version 0.3-0, 2018-12-11 ***

 ** User-visible changes **

  * plot.diagmeta():
    new plot type to show sensitivity and specificity curves

  * New arguments 'sens' and 'spec' in diagstats()

  * print.summary.diagmeta():
    - print confidence interval for optimal cutoff
      (for normal distribution)

  * New function as.data.frame.diagmeta()

 ** Bug fixes **

  * plot.diagmeta():
    - correct ROC curves for datasets with decreasing cutoff values
      for individual studies (points (0, 0) and (1, 1) were connected
      with the wrong values on the ROC curve)

 ** Internal changes **

  * diagmeta():
    - calculate and return lower and upper confidence limit for
      optimal cutoff (for normal distribution)
    

*** diagmeta, version 0.2-0, 2018-03-23 ***

 ** First version released on CRAN **