@@ -16,6 +16,7 @@ export(print.diagstats)
 export(print.summary.diagmeta)
 export(summary.diagmeta)
 importFrom(grDevices,cm.colors)
+importFrom(grDevices,colours)
 importFrom(grDevices,heat.colors)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
